fixed special nodes overlapping bug

--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -1,17 +1,15 @@
+* {
+  cursor: default !important;
+}
 .node {
-  width: 23px;
-  height: 23px;
+  width: 25px;
+  height: 25px;
   outline: 1px solid rgb(175, 216, 248);
   display: inline-block;
   -moz-user-select: none;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -ms-user-select: none;
-  cursor: default !important;
-}
-
-.node::selection {
-  cursor: pointer;
 }
 
 .node-weight {
@@ -21,57 +19,21 @@
 }
 
 .node-finish {
-  /* background-color: red !important; */
   background-image: url(../assets/finalNode.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .node-start {
-  /* background-color: green !important; */
   background-image: url(../assets/startNode.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
 
-/* .node-wall {
-  background-color: rgb(12, 53, 71) !important;
-} */
-
-.node-path {
-  background-color: yellow;
-}
-
 .node-wall {
   background-color: rgb(12, 53, 71);
+  outline: none;
 }
-/* .node-wall {
-  animation-name: wallAnimation;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-out;
-  animation-delay: 0;
-  animation-direction: alternate;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-play-state: running;
-}
-
-@keyframes wallAnimation {
-  0% {
-    transform: scale(0.3);
-    background-color: rgb(12, 53, 71);
-  }
-
-  50% {
-    transform: scale(1.2);
-    background-color: rgb(12, 53, 71);
-  }
-
-  100% {
-    transform: scale(1);
-    background-color: rgb(12, 53, 71);
-  }
-} */
 
 .node-bomb {
   background-image: url(../assets/bomb.svg);
@@ -193,11 +155,3 @@
     background-color: rgb(255, 254, 106);
   }
 }
-
-/* .node-live-visited {
-  background-color: rgba(0, 190, 218, 0.75);
-}
-
-node-live-shortest-path {
-  background-color: rgb(255, 254, 106);
-} */
